fix: prevent decorative images from blocking button clicks with z-index

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -136,6 +136,7 @@
 .main__decoration--left {
   position: absolute;
   margin-top: -12.5rem;
+  z-index: -1;
 }
 .main__products {
   display: flex;
@@ -165,6 +166,7 @@
   margin-top: -5rem;
   right: 0;
   transform: scaleX(-1);
+  z-index: -1;
 }
 .main__advantages {
   display: flex;
